# nn-binary-analysis

./: CMakeLists.txt  README.md  codebase.md
include/nn_binary_analysis/: analyzer.hpp
nn_binary_analysis/include/nn_binary_analysis/: analyzer.hpp
nn_binary_analysis/src/core/: binary_parser.cpp  binary_parser.hpp  framework_detector.cpp  framework_detector.hpp  transformer_detector.cpp  transformer_detector.hpp  types.hpp
nn_binary_analysis/tools/nn_detect/: main.cpp
src/core/: binary_parser.cpp  binary_parser.hpp  memory_analyzer.cpp  memory_analyzer.hpp  types.hpp
tools/nn_analyze/: main.cpp
